--- a/src/main/cz/fel/ds/gui/mainPage/main_page.fxml
+++ b/src/main/cz/fel/ds/gui/mainPage/main_page.fxml
@@ -11,12 +11,12 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TextField fx:id="pacientSearch" layoutX="14.0" layoutY="14.0" onKeyReleased="#patientsSearch" prefHeight="25.0" prefWidth="660.0" promptText="Start typing name or ID number to find patient" />
+                        <TextField fx:id="pacientSearch" layoutX="14.0" layoutY="14.0" onKeyReleased="#patientsSearch" prefHeight="25.0" prefWidth="660.0" promptText="Start typing name or ID number to search patient..." />
                         <TableView fx:id="patientsTable" cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" layoutX="14.0" layoutY="83.0" pickOnBounds="false" prefHeight="473.0" prefWidth="772.0" scaleShape="false">
                             <columns>
                                 <TableColumn editable="false" minWidth="0.0" prefWidth="91.0" resizable="false" sortable="false" text="ID" />
-                                <TableColumn editable="false" prefWidth="326.0" resizable="false" sortable="false" text="First name" />
-                                <TableColumn editable="false" prefWidth="354.0" resizable="false" sortable="false" text="Last name" />
+                                <TableColumn editable="false" prefWidth="326.0" resizable="false" sortable="false" text="first name" />
+                                <TableColumn editable="false" prefWidth="354.0" resizable="false" sortable="false" text="last name" />
                             </columns>
                             <columnResizePolicy>
                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -38,48 +38,80 @@
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="65.0" minHeight="10.0" prefHeight="17.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="106.0" minHeight="0.0" prefHeight="36.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="166.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="445.0" minHeight="10.0" prefHeight="445.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="65.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="166.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="474.0" minHeight="10.0" prefHeight="474.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TableView fx:id="dietTable" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+                        <TableView fx:id="dietTable" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                           <columns>
-                            <TableColumn prefWidth="254.0" text="Name" />
+                            <TableColumn prefWidth="254.0" text="name" />
                           </columns>
                         </TableView>
-                        <TableView fx:id="mealTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <TableView fx:id="mealTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                           <columns>
-                            <TableColumn editable="false" prefWidth="187.0" resizable="false" sortable="false" text="Name" />
+                            <TableColumn editable="false" prefWidth="187.0" resizable="false" sortable="false" text="name" />
                               <TableColumn editable="false" prefWidth="66.0" resizable="false" sortable="false" text="kJ" />
                           </columns>
                         </TableView>
-                        <TableView fx:id="foodTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                        <TableView fx:id="foodTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                           <columns>
-                            <TableColumn prefWidth="196.0" text="Name" />
+                            <TableColumn prefWidth="196.0" text="name" />
                               <TableColumn editable="false" minWidth="3.0" prefWidth="52.0" resizable="false" sortable="false" text="kJ" />
                           </columns>
                         </TableView>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Diet" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Meal" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Food" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <TextField fx:id="dietSearch" promptText="Type in diet name" GridPane.rowIndex="1" />
-                        <TextField fx:id="mealSearch" onKeyReleased="#mealSearch" promptText="Type in meal name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="foodSearch" onKeyReleased="#foodSearch" promptText="Type in food name" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#mealAdd" text="Add" />
+                              <GridPane prefHeight="37.0" prefWidth="315.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.0" minWidth="10.0" prefWidth="215.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="39.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#mealAdd" text="Add" GridPane.columnIndex="1" />
+                                    <TextField fx:id="mealSearch" onKeyReleased="#mealSearch" promptText="Start typing name to search..." />
+                                 </children>
+                              </GridPane>
                            </children>
                         </HBox>
-                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#foodAdd" text="Add" />
+                              <GridPane prefHeight="37.0" prefWidth="339.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="217.0" minWidth="10.0" prefWidth="213.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="41.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#foodAdd" prefHeight="25.0" prefWidth="39.0" text="Add" GridPane.columnIndex="1" />
+                                    <TextField fx:id="foodSearch" onKeyReleased="#foodSearch" prefHeight="25.0" prefWidth="130.0" promptText="Start typing name to search..." />
+                                 </children>
+                              </GridPane>
                            </children>
                         </HBox>
-                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#dietAdd" text="Add" />
+                              <GridPane prefHeight="31.0" prefWidth="292.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="223.0" minWidth="10.0" prefWidth="216.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="39.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#dietAdd" text="Add" GridPane.columnIndex="1" />
+                                    <TextField fx:id="dietSearch" prefHeight="25.0" prefWidth="181.0" promptText="Start typing name to search..." />
+                                 </children>
+                              </GridPane>
                            </children>
                         </HBox>
                      </children>
@@ -97,37 +129,56 @@
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="131.0" minHeight="0.0" prefHeight="20.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="343.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="344.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="452.0" minHeight="10.0" prefHeight="452.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="131.0" minHeight="0.0" prefHeight="21.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="344.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="485.0" minHeight="10.0" prefHeight="485.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Training program" />
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Exercise" GridPane.columnIndex="1" />
-                        <TableView fx:id="trainingProgramTable" prefHeight="192.0" prefWidth="295.0" GridPane.rowIndex="3">
+                        <TableView fx:id="trainingProgramTable" prefHeight="192.0" prefWidth="295.0" GridPane.rowIndex="2">
                           <columns>
-                            <TableColumn editable="false" prefWidth="216.0" resizable="false" sortable="false" text="Name" />
-                              <TableColumn editable="false" resizable="false" sortable="false" text="Duration" />
-                              <TableColumn editable="false" resizable="false" sortable="false" text="kJ/kg" />
+                            <TableColumn editable="false" prefWidth="380.0" resizable="false" sortable="false" text="name" />
                           </columns>
                         </TableView>
-                        <TableView fx:id="exerciseTable" prefHeight="197.0" prefWidth="253.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <TableView fx:id="exerciseTable" prefHeight="197.0" prefWidth="253.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                           <columns>
-                            <TableColumn editable="false" prefWidth="301.0" sortable="false" text="Name" />
+                            <TableColumn editable="false" prefWidth="301.0" sortable="false" text="name" />
                               <TableColumn editable="false" prefWidth="79.0" resizable="false" sortable="false" text="kJ/kg/min" />
                           </columns>
                         </TableView>
-                        <TextField fx:id="trainingSearch" onKeyReleased="#trainingSearch" GridPane.rowIndex="1" />
-                        <TextField fx:id="exerciseSearch" onKeyReleased="#exerciseSearch" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
+                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#trainingAdd" text="Add" />
+                              <GridPane prefHeight="38.0" prefWidth="627.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="374.0" minWidth="10.0" prefWidth="347.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="188.0" minWidth="10.0" prefWidth="40.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#trainingAdd" text="Add" GridPane.columnIndex="1" />
+                                    <TextField fx:id="trainingSearch" onKeyReleased="#trainingSearch" promptText="Start typing name to search..." />
+                                 </children>
+                              </GridPane>
                            </children>
                         </HBox>
-                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#exerciseAdd" text="Add" />
+                              <GridPane prefHeight="38.0" prefWidth="561.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="350.0" minWidth="10.0" prefWidth="347.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="188.0" minWidth="10.0" prefWidth="40.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#exerciseAdd" text="Add" GridPane.columnIndex="1" />
+                                    <TextField fx:id="exerciseSearch" onKeyReleased="#exerciseSearch" promptText="Start typing name to search..." />
+                                 </children>
+                              </GridPane>
                            </children>
                         </HBox>
                      </children>
