--- a/src/main/cz/fel/ds/gui/dietToPacientDialog/dietToPacient_dialog.fxml
+++ b/src/main/cz/fel/ds/gui/dietToPacientDialog/dietToPacient_dialog.fxml
@@ -26,14 +26,14 @@
          <children>
             <HBox GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Rozpis jídel pro daný jídelníček" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Meal schedule for selected diet" />
                </children></HBox>
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available meals for specific meal type" />
                </children>
             </HBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Jídelníčky" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Diet" />
             <TextField fx:id="dayField" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                <children>
@@ -67,19 +67,19 @@
             </GridPane>
             <TableView fx:id="mealScheduleTable" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
               <columns>
-                <TableColumn fx:id="mtOrder" prefWidth="40.0" text="Day" />
-                <TableColumn fx:id="mtMealTypeName" minWidth="0.0" prefWidth="68.0" text="Meal type" />
-                  <TableColumn fx:id="mtName" prefWidth="154.0" text="Meal" />
+                <TableColumn fx:id="mtOrder" editable="false" prefWidth="40.0" resizable="false" sortable="false" text="Day" />
+                <TableColumn fx:id="mtMealTypeName" editable="false" minWidth="0.0" prefWidth="68.0" resizable="false" sortable="false" text="Meal type" />
+                  <TableColumn fx:id="mtName" editable="false" prefWidth="146.0" resizable="false" sortable="false" text="Meal" />
               </columns>
             </TableView>
             <TableView fx:id="mealsTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
               <columns>
-                <TableColumn prefWidth="140.0" text="Meal" />
-                <TableColumn prefWidth="110.0" text="Kj" />
+                <TableColumn editable="false" prefWidth="140.0" resizable="false" sortable="false" text="Meal" />
+                <TableColumn editable="false" prefWidth="110.0" resizable="false" sortable="false" text="Kj" />
               </columns>
             </TableView>
-            <ComboBox fx:id="diets" prefWidth="150.0" GridPane.rowIndex="1" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Změna u dnu" GridPane.columnIndex="2" />
+            <ComboBox fx:id="diets" onMouseReleased="#refreshList" prefWidth="150.0" GridPane.rowIndex="1" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Change in day" GridPane.columnIndex="2" />
             <ComboBox fx:id="mealTypes" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
          </children>
       </GridPane>
